--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.5",
+    "uuid": "^11.1.0",
     "validator": "^13.15.15",
     "xss-clean": "^0.1.4"
   }
